Shenandoah: gc/shenandoah/TestStringInternCleanup fails with broken string table root

XMLWordPrintable

    • gc
    • b24

      Gotland caught this very intermittent failure with gc/shenandoah/TestStringInternCleanup.java:

      # Internal Error (/home/jenkins/workspace/nightly/jdk-jdk/src/hotspot/share/gc/shenandoah/shenandoahForwarding.inline.hpp:69), pid=2533, tid=2574
      # Error: Shenandoah assert_correct failed; Object klass pointer must go to metaspace

      Referenced from:
        no interior location recorded (probably a plain heap scan, or detached oop)

      Object:
        0x00000000fc1c6eb8 - safe print, no details
        region: | 7|EC |BTE fc1c0000, fc1c0000, fc200000|TAMS fc1c0000|UWM fc1c0000|U 0B|T 0B|G 0B|S 0B|L 0B|CP 0

      Raw heap memory:
      0x00000000fc1c6e98: baadbabe baadbabe baadbabe baadbabe
      0x00000000fc1c6ea8: baadbabe baadbabe baadbabe baadbabe

      ...

      Stack: [0x00007fb4173bb000,0x00007fb4174bc000], sp=0x00007fb4174b6d50, free space=1007k
      Native frames: (J=compiled Java code, A=aot compiled Java code, j=interpreted, Vv=VM code, C=native code)
      V [libjvm.so+0x17330af] VMError::report_and_die(int, char const*, char const*, __va_list_tag*, Thread*, unsigned char*, void*, void*, char const*, int, unsigned long)+0x37f
      V [libjvm.so+0x1733eaf] VMError::report_and_die(Thread*, void*, char const*, int, char const*, char const*, __va_list_tag*)+0x2f
      V [libjvm.so+0x8cc7e1] report_vm_error(char const*, int, char const*, char const*, ...)+0x111
      V [libjvm.so+0x142bf1b] ShenandoahAsserts::print_failure(ShenandoahAsserts::SafeLevel, oop, void*, oop, char const*, char const*, char const*, int)+0x48b
      V [libjvm.so+0x142c8ce] ShenandoahAsserts::assert_correct(void*, oop, char const*, int)+0x11e
      V [libjvm.so+0x122914b] ShenandoahBarrierSet::resolve_forwarded_not_null(oop)+0x4b
      V [libjvm.so+0x1430298] ShenandoahBarrierSet::load_reference_barrier_impl(oop)+0x88
      V [libjvm.so+0x143065b] ShenandoahBarrierSet::load_reference_barrier_not_null(oop)+0x7b
      V [libjvm.so+0x1434339] oop ShenandoahBarrierSet::load_reference_barrier_native_impl<oop>(oop, oop*)+0x89
      V [libjvm.so+0x1430824] ShenandoahBarrierSet::load_reference_barrier_native(oop, oop*)+0x34
      V [libjvm.so+0x7f4833] AccessInternal::PostRuntimeDispatch<ShenandoahBarrierSet::AccessBarrier<1187956ul, ShenandoahBarrierSet>, (AccessInternal::BarrierType)2, 1187956ul>::oop_access_barrier(void*)+0x93
      V [libjvm.so+0x1566c2c] void ConcurrentHashTable<StringTableConfig, (MemoryType)10>::delete_in_bucket<StringTableLookupOop>(Thread*, ConcurrentHashTable<StringTableConfig, (MemoryType)10>::Bucket*, StringTableLookupOop&)+0x10c
      V [libjvm.so+0x15647c0] StringTable::do_intern(Handle, unsigned short const*, int, unsigned long, Thread*)+0xde0
      V [libjvm.so+0x1564a53] StringTable::intern(Handle, unsigned short const*, int, Thread*)+0x163
      V [libjvm.so+0x1564cd0] StringTable::intern(oop, Thread*)+0x180
      V [libjvm.so+0xdd945d] JVM_InternString+0x11d

            Assignee:
            Zhengyu Gu
            Reporter:
            Aleksey Shipilev
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved: