8244953: Shenandoah: gc/shenandoah/TestStringInternCleanup fails with broken string table root

Reviewed-by: shade