src/hotspot/share/gc/shenandoah/shenandoahPhaseTimings.cpp
@@ -107,7 +107,7 @@ bool ShenandoahPhaseTimings::is_worker_phase(Phase phase) {
     case purge_class_unload:
     case purge_weak_par:
     case heap_iteration_roots:
-    case conc_weak_roots:
+    case conc_weak_roots_work:
     case conc_strong_roots:
       return true;
     default:
